--- a/molsim-v3.0/src/Makefile
+++ b/molsim-v3.0/src/Makefile
@@ -1,12 +1,13 @@
 # コンパイラとフラグ
 CC = gcc
 CFLAGS = -Wall -O2 -std=c99
+LDFLAGS = -lm  # 数学関数用のリンクオプション
 
 # ソースファイルとオブジェクトファイル
 SRCS = main.c atom.c force.c integrator.c boundary.c
 OBJS = $(SRCS:.c=.o)
 
-# ヘッダーファイル
+# ヘッダーファイル（依存関係リスト）
 HEADERS = atom.h force.h integrator.h parameter.h sysdef.h boundary.h
 
 # 出力ファイル名
@@ -17,7 +18,7 @@ all: $(TARGET)
 
 # リンクして実行ファイルを作成
 $(TARGET): $(OBJS)
-	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS)
+	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS) $(LDFLAGS)
 
 # 依存関係のある.oファイルの生成ルール
 %.o: %.c $(HEADERS)
@@ -29,3 +30,4 @@ clean:
 
 # 再ビルド
 rebuild: clean all
+	@echo "全て再ビルドが完了しました！✨"
